--- a/src/product.css
+++ b/src/product.css
@@ -27,7 +27,7 @@
    font-family: "Roboto";
    margin-top: -5px!important;
  }
- 
+
 .rounded-background-box h1{
   letter-spacing: 1.5px;
   font-weight: 600;
@@ -167,8 +167,8 @@
   background-image: linear-gradient(40deg,  #fc9a07 0%,  #fba82b 100%);
   border: none;
   color: white;
-  padding: 15px 80px;
   text-align: center;
+  justify-content: center;
   text-decoration: none;
   border-radius: 10px;
   font-size: 20px;
@@ -268,7 +268,7 @@
 }
 
 .mobile{
-  height: 105vh;
+  height: 110vh;
 }
 
 .product-mobile {
